@startuml class_diagram

class pathFollower{
  +pathFollower()
  {static}loop()
  {static}createPath()
  {static}myPath : path
}

abstract class "entity"{
  +entity()
  +getName() : string
  +setName()
  +getId() : int
  +setId()
  +draw()
  +entityColor : color
}

class evade{
  +evade()
  {static}loop()
}

class wander{
  +wander()
  {static}loop()
}

class windy{
  +windy()
  {static}loop()
  {static}flow : flowField
}

class leaderFollower{
  +leaderFollower()
  {static}loop()
  {static}leaderPosition : point
  {static}leaderVelocity : pvector
}


class obstacleAvoidance{
  +obstacleAvoidance()
  {static}loop()
  {static}obstacles : obstacle
  {static}createObstacle()
}

class flee{
  +flee()
  {static}loop()
}

class flock{
  +floack()
  {static}loop()
}

class mouseFollower{
  +mouseFollower()
  {static}loop()
}

class steeringBehavior{
  +stayInArea() : pvector
  +inFlowField() : pvector
  +stayInPath() : pvector
  +seek() : pvector
  +separation() : pvector
  +cohesion() : pvector
  +align() : pvector
  +wander() : pvector
  +pursuit() : pvector
  +evade() : pvector
  +flee() : pvector
  +avoid() : pvector
  -setAngle()
}

class scenario {
  +scenario()
  +createAgent()
  +initGL()  
  {static}agents : agent
  {static}view : graphics
  {static}behavior : steeringBehavior
  {static}name : string
  +callback : void(*)()
  {static}refresh()
  -createRandomAgents()
  -createStaticAgents()
  -createTroop()
}

class random {
  {static} createRandomArray()
}

class path {
  +points : point
  +width : int
  +path()
  +addPoint()
  +draw()
}

class agent{
  +agent()
  +~agent()
  +updatePosition()
  +setFeatures()
  +getName() : string
  +setName()
  +getMass() : float
  +setMass()
  +getVelocity() : pvector
  +setVelocity()  
  +getTarget() : point
  +setTarget()  
  +draw()
  +position : point  
  +maxSpeed : float
  +maxForce : float
  +steering : pvector
  +force : pvector
  +acceleration : pvector
  +desiredVelocity : pvector
  +id : int
  +arrive : bool
  -targetPoint : point
  -mass : float
  -name : string
  -velocity : pvector
}

class pvector{
  +pvector()
  +magnitude() : float
  +normalize() : pvector &
  +div()
  +mul()
  +add()
  +limit()
  +getAngle() : float
  +dotProduct() : float
  +angleBetween() : float
  +print()
  +x : float
  +y : float
}

class flowField{
  +flowField()
  +getField() : pvector
  -uniformField : pvector 
  -createFlowField()
  -perlinNoise()
  -randomField()
}

class obstacle{
  +p : point
  +r : float 
  +getCenter() : point
  +setCenter()
  +getRadius() : float
  +setRadius()
  +obstacle()  
  +draw()
  -p : point
  -r : float
}

class point{
  +x : float
  +y : float 
  +point()  
  +div()
  +mul()
  +print()
  +getNormalPoint()
}


class color{
  +R : float
  +G : float 
  +B : float
  +color()  
  +void createColors()
  {static}getColor() : color
}

class graphics{
  +drawAgent()
  +drawLine() 
  +drawPath()
  +drawPoint()
  +drawCircle()
  +drawText()
  +forceInScreen()
  +refreshScene()
  +getMousePosition() : point
  +void initGraphics()
  {static} timerEvent()
  {static} handleKeypress()
  {static} mouseButton()
  {static} handleResize()
  {static} mouseMove()
  {static} target_x : int
  {static} target_y : int
}

entity <|-- path : is a <
entity <|-- agent : is a <
entity <|-- obstacle : is a < 
obstacle o-- point : has >
flowField "1" o-- pvector : has many >
agent "1" o-- pvector : has many >
agent "1" o-- point : has >
entity o-- color : has >
path "1" o-- point : is composed of many >
scenario "1" o-- agent : has many >
scenario o-- graphics : uses >
scenario o-- steeringBehavior : uses  >
scenario <|-- evade : is a <
scenario <|-- leaderFollower : is a <
scenario <|-- flee : is a <
scenario <|-- flock : is a <
scenario <|-- mouseFollower : is a <
scenario <|-- obstacleAvoidance : is a <
scenario <|-- pathFollower : is a <
scenario <|-- wander : is a <
scenario <|-- windy : is a <
obstacleAvoidance "1" o-- obstacle : has many >
pathFollower o-- path : has >
windy "1" o-- flowField : has many >
scenario - random : uses >
@enduml
